@@ -1,3 +1,10 @@
+2014-01-01  Torbjorn Granlund  <tege@gmplib.org>
+
+	* mpn/generic/sec_div.c: Rewrite to make mpn_sec_div_qr return high
+	quotient limb.
+	* gmp-h.in (mpn_sec_div_qr): Update declaration.
+	* tests/mpn/t-div.c: Adapt.
+
 2013-12-31  Niels Möller  <nisse@lysator.liu.se>
 
 	* doc/gmp.texi (Low-level Functions for cryptography): Document
